--- a/inex.html
+++ b/inex.html
@@ -7,6 +7,17 @@
     <title>Pomodoro Js</title>
   </head>
   <body>
+    <div class="display">
+      <input class="work-display"></input>
+    </div>
+    <div class="control">
+      <button class="down">-</button>
+      <input type="text" class="work-time"></input>
+      <button class="up">+</button>
+    </div>
+    <button class="play">Play</button>
+    <button class="pause">Pause</button>
+    <button class="stop">Stop</button>
     <script src="script.js"></script>
   </body>
 </html>
