--- a/inex.html
+++ b/inex.html
@@ -7,17 +7,33 @@
     <title>Pomodoro Js</title>
   </head>
   <body>
-    <div class="display">
-      <input class="work-display"></input>
+    <div class="container">
+      <div class="top-bar"></div>
+      <div class="content">
+        <div class="display">
+          <input class="focus-display"></input>
+          <input class="relax-display"></input>
+          <div class="display-controls">
+            <button class="play">Play</button>
+            <button class="pause">Pause</button>
+            <button class="stop">Stop</button>
+          </div>
+        </div>
+        <div class="controls">
+          <div class="focus-controls">
+            <button class="down">-</button>
+            <input class="focus-time"></input>
+            <button class="up">+</button>
+          </div>
+          <div class="relax-controls">
+            <button class="down">-</button>
+            <input class="relax-time"></input>
+            <button class="up">+</button>
+          </div>
+        </div>
+      </div>
     </div>
-    <div class="control">
-      <button class="down">-</button>
-      <input type="text" class="work-time"></input>
-      <button class="up">+</button>
-    </div>
-    <button class="play">Play</button>
-    <button class="pause">Pause</button>
-    <button class="stop">Stop</button>
+    
     <script src="script.js"></script>
   </body>
 </html>
