:fire: Counter without loop

--- a/inex.html
+++ b/inex.html
@@ -26,9 +26,9 @@
         <div class="controls">
           <div class="focus-controls">
             <div class="focus-buttons">
-              <button class="down">-</button>
+              <button class="down-focus">-</button>
               <input class="focus-time"></input>
-              <button class="up">+</button>
+              <button class="up-focus">+</button>
             </div>
             <div class="focus-name">
               <p>Focus Time</p>
@@ -36,9 +36,9 @@
           </div>
           <div class="relax-controls">
             <div class="relax-buttons">
-              <button class="down">-</button>
+              <button class="down-relax">-</button>
               <input class="relax-time"></input>
-              <button class="up">+</button>
+              <button class="up-relax">+</button>
             </div>
             <div class="relax-name">
               <p>Relax Time</p>
