:zap: Github link

--- a/inex.html
+++ b/inex.html
@@ -9,25 +9,34 @@
   <body>
     <div class="container">
       <div class="top-bar">
-        <img src="./assets/logo.png" alt="Pomodoro Logo">
+        <img src="./assets/logo.png" alt="Pomodoro Logo" />
+        <a href="https://github.com/muril0-0/pomodoro-js" target="_blank">
+          <img src="./assets/github.png" alt="Github Logo" />
+        </a>
       </div>
       <div class="content">
         <div class="display">
           <div class="display-counters">
-            <input class="focus-display"></input>
-            <input class="relax-display"></input>
+            <input class="focus-display" />
+            <input class="relax-display" />
           </div>
           <div class="display-controls">
-            <button class="pause"><img src="./assets/pause.png" alt="Pomodoro Pause Button"></button>
-            <button class="play"><img src="./assets/play.png" alt="Pomodoro Play Button"></button>
-            <button class="stop"><img src="./assets/stop.png" alt="Pomodoro Stop Button"></button>
+            <button class="pause">
+              <img src="./assets/pause.png" alt="Pomodoro Pause Button" />
+            </button>
+            <button class="play">
+              <img src="./assets/play.png" alt="Pomodoro Play Button" />
+            </button>
+            <button class="stop">
+              <img src="./assets/stop.png" alt="Pomodoro Stop Button" />
+            </button>
           </div>
         </div>
         <div class="controls">
           <div class="focus-controls">
             <div class="focus-buttons">
               <button class="down-focus">-</button>
-              <input class="focus-time"></input>
+              <input class="focus-time" />
               <button class="up-focus">+</button>
             </div>
             <div class="focus-name">
@@ -37,7 +46,7 @@
           <div class="relax-controls">
             <div class="relax-buttons">
               <button class="down-relax">-</button>
-              <input class="relax-time"></input>
+              <input class="relax-time" />
               <button class="up-relax">+</button>
             </div>
             <div class="relax-name">
@@ -47,7 +56,7 @@
         </div>
       </div>
     </div>
-    
+
     <script src="script.js"></script>
   </body>
 </html>
